wip: added a stub controller and service for handling Courses
